--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -7,21 +7,21 @@
     tools:context="com.example.deltasix.Confirm">
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnConfirmation"
         android:layout_width="250dp"
         android:layout_height="41dp"
         android:text="تایید"
         tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="221dp" />
+        tools:layout_editor_absoluteY="199dp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/txtConfirmation"
         android:layout_width="328dp"
         android:layout_height="56dp"
         android:ems="10"
         android:inputType="number"
         android:maxLength="5"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="44dp" />
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="68dp" />
 
 </android.support.constraint.ConstraintLayout>
