--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,11 +8,14 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="250dp"
-        android:layout_height="41dp"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="ورود"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="181dp" />
+        android:textAlignment="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="202dp" />
 
     <EditText
         android:id="@+id/txtMobileNumber"
@@ -22,6 +25,9 @@
         android:hint="شماره موبایل"
         android:inputType="number"
         android:maxLength="13"
+        android:selectAllOnFocus="false"
+        android:singleLine="false"
         tools:layout_editor_absoluteX="28dp"
         tools:layout_editor_absoluteY="52dp" />
+
 </android.support.constraint.ConstraintLayout>
